--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Головна сторінка</title>
 
-    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="normalize.css" />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet" />
-    <link rel="stylesheet" href="./css/variable.css">
-    <link rel="stylesheet" href="./css/styles.css" />  
+    <link rel="stylesheet" href="variable.css">
+    <link rel="stylesheet" href="styles.css" />  
 </head>
 
 <body>
